show exact file if file is searched instead of folder